--- a/legacy.tex
+++ b/legacy.tex
@@ -144,7 +144,7 @@ However, the average quality of mapped bases per individual appeared to be the b
 \begin{figure}
 \includegraphics[width=\hsize,keepaspectratio]{./Figures/MapQualOverTime.jpg}
 
-\caption{\textbf{A} \sgcomment{Don't forget to update the axis labels!} The average mapping quality of each individual per population included in the 1000 Genomes sequencing project. The earliest sequencing data is used for individuals sequenced more than once. The x-axis is ranked by the mean sequencing date per population. \textbf{B} The x-axis is sorted by the sequencing date per individual. The colours indicate the sequencing centres that produced the data for each individual and the shape indicates whether the individual belongs to Phase 1 or Phase 3 of the 1000 Genomes project. The bottom plot indicates the sequencing technologies used over time.}
+\caption{\textbf{A} \sgcomment{Don't forget to update the axis labels!} The average quality of mapped bases for each individual per population included in the 1000 Genomes sequencing project. The earliest sequencing data is used for individuals sequenced more than once. The x-axis is ranked by the mean sequencing date per population. \textbf{B} The x-axis is sorted by the sequencing date per individual. The colours indicate the sequencing centres that produced the data for each individual and the shape indicates whether the individual belongs to Phase 1 or Phase 3 of the 1000 Genomes project. The bottom plot indicates the sequencing technologies used over time.}
 \label{MapQual}
 \end{figure}
 
@@ -175,7 +175,9 @@ The same variants identified as being low quality independently in each populati
 \subsection{Imputation}
 The state of the art imputation servers use a combination of many databases including many that are not freely available.
 From the perspective of researchers, they act as black-box imputation machines that take observed genotypes as input and return imputed genotypes.  
-In order to investigate the proportion of variants that we've identified as being associated to quality that are being imputed, we submitted genotype data from low-quality 1kGP individuals to the Michigan Imputation Server, and found that all of the SNPs we identified as being associated with quality were imputed. \sgcomment{All of them? How is it possible if we only submitted Japanese? Also, I thought that we had only submitted a couple of chromosomes.}
+In order to investigate the proportion of variants that we've identified as being associated to quality that are being imputed, we submitted genotype data from low-quality 1kGP individuals to the Michigan Imputation Server, and found that all of the SNPs we identified as being associated with quality were imputed. 
+\sgcomment{All of them? How is it possible if we only submitted Japanese? Also, I thought that we had only submitted a couple of chromosomes.} 
+\luke{Submitted all of the 1kGP, queried the combined meta-analysis list of SNPs}
 This suggests that the imputation reference panel likely includes individuals with low sequence quality, and the dubious variants have not been removed. \sgcomment{It may be useful to impute some of the NAG data.} 
 
 
@@ -200,7 +202,7 @@ One of the top 25 SNPs in the GWAS on ADHD (rs6057648) was identified as being s
 
 While they are clear in reporting that these SNPs are not genome wide significant, one can imagine a meta-analysis using this dataset would include the false positive SNP we identified. 
 Furthermore, the approach they used to impute genotype data for GWAS is very common.
-A literature search of the keywords 'GWAS Genotype Imputation' yielded 19,300 results. \sgcomment{What is this about??}
+%A literature search of the keywords 'GWAS Genotype Imputation' yielded 19,300 results. \sgcomment{What is this about??}
 
 \subsection{PLos One}
 This paper used the raw BAM files from the 1kGP to identify EBV copy number by comparing the coverage of mapped reads to EBV.
@@ -239,8 +241,6 @@ Another approach is to remove all the sites that reach a significance below $ p 
 %B tail trimming  (Minoche et al. Genome Biology 2011)
 %issues with PCR?
 %repetitive regions, GC bias...
-
-
 
 \section{Conclusion}
 
